extra padding fix

--- a/style.sass
+++ b/style.sass
@@ -57,7 +57,7 @@ a, a:visited
   font-weight: bold
   position: relative
   display: inline-block
-  padding-left: 1vw
+  padding-left: 100vw
   text-transform: uppercase
   // -webkit-transition: all 0.1s
   // -webkit-animation: colorchange 4s infinite
